Added margin to quote cards to improve visibility across devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -279,6 +279,8 @@ p {
 }
  
 .card {
+    margin-top: 10px;
+    margin-bottom: 10px;
     position: relative;
     display: -ms-flexbox;
     display: flex;
