--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -124,6 +124,11 @@ a.navbar-brand {
     margin: 0 auto;
 }
 
+.container-fluid.mt-40 {
+    padding: 20px 30px;
+    margin-top: 0 auto;
+}
+
 /* Jumbotron */
 /* jumbotron syntax and were copied from Code Institute's Whiskey Drop project */
 .jumbotron-container {
@@ -239,6 +244,102 @@ i.fas.fa-praying-hands.d-sm-block:hover {
     margin-top: 30px;
     margin-bottom: 30px;
 }
+
+.box13 {
+    position: relative;
+    -webkit-transition: all 0.2s ease-out 0s;
+    -o-transition: all 0.2s ease-out 0s;
+    transition: all 0.2s ease-out 0s;
+    width: 300px;
+    height: auto;
+  }
+  
+  .box13 .box-content,
+  .box13:after {
+    position: absolute;
+    left: 20px;
+    right: 20px;
+  }
+  
+  .box13:after {
+    content: "";
+    display: block;
+    background: rgba(105, 168, 169, 2);
+    top: 20px;
+    bottom: 20px;
+    opacity: 0;
+    -webkit-transform: rotate3d(-1, 1, 0, 100deg);
+            transform: rotate3d(-1, 1, 0, 100deg);
+    -webkit-transition: all 0.4s ease-in-out 0s;
+    -o-transition: all 0.4s ease-in-out 0s;
+    transition: all 0.4s ease-in-out 0s;
+  }
+  
+  .box13:hover:after {
+    opacity: 0.9;
+    -webkit-transform: rotate3d(0, 0, 0, 0deg);
+            transform: rotate3d(0, 0, 0, 0deg);
+  }
+  
+  .box13 img {
+    max-width: 100%;
+    height: auto;
+    overflow: hidden;
+  }
+  
+  .box13 .box-content {
+    top: 45%;
+    opacity: 0;
+    z-index: 1;
+    -webkit-transform: translate(10%, -30%);
+    -ms-transform: translate(10%, -30%);
+        transform: translate(10%, -30%);
+    -webkit-transition: all 0.2s ease-out 0s;
+    -o-transition: all 0.2s ease-out 0s;
+    transition: all 0.2s ease-out 0s;
+  }
+  
+  .box13:hover .box-content {
+    opacity: 1;
+    -webkit-transform: translate(0, -50%);
+        -ms-transform: translate(0, -50%);
+            transform: translate(0, -50%);
+    -webkit-transition-delay: 0.2s;
+         -o-transition-delay: 0.2s;
+            transition-delay: 0.2s;
+  }
+  
+  .box13 .title {
+    display: block;
+    font-size: 20px;
+    font-weight: 700;
+    color: #000000;
+    margin: 0 0 10px;
+    font-family: "Playfair Display", serif;
+    font-style: italic;
+    text-align: center;
+    margin-top: 30px;
+  }
+  
+  .box13 .post {
+    font-family: "Futura-PT", san-serif;
+    display: block;
+    font-size: 16px;
+    color: #000000;
+    text-align: center;
+  }
+  
+  .btn.btn-sm.btn-dark {
+    font-family: "Futura-PT", san-serif;
+    text-align: center;
+    color: #f2f2f2;
+  }
+  
+  @media only screen and (max-width: 990px) {
+    .box13 {
+      margin-bottom: 30px;
+    }
+  }
 
 /*-------------------------------------------- Quotes */
 .container-wrapper-quotes{
