--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -271,12 +271,16 @@ div.box {
             transform: rotate3d(0, 0, 0, 0deg);
   }
   
-img.img-fluid {
+img.schedule-img {
     max-width: 100%;
     height: auto;
+    position: relative;
     overflow: hidden;
+    border-top-left-radius: .25rem;
+    border-top-right-radius: .25rem;
     box-shadow: rgba(1, 24, 38, 0.16) 0px 2px 5px 0px, rgba(1, 24, 38, 0.12) 0px 2px 10px 0px;
-    border: 2px solid #f2f2f2;
+    border: 4px solid #f2f2f2;
+    display: flex;
 }
   
   .box .box-content {
@@ -317,7 +321,7 @@ img.img-fluid {
   
   .box .post {
     font-family: "Futura-PT", san-serif;
-    display: block;
+    display: inline-block;
     font-size: 16px;
     color: #000000;
     text-align: center;
@@ -329,6 +333,8 @@ img.img-fluid {
     color: #f2f2f2;
     margin-top: 10px;
     margin-bottom: 10px;
+    font-size: 18px;
+    box-shadow: rgba(1, 24, 38, 0.16) 0px 2px 5px 0px, rgba(1, 24, 38, 0.12) 0px 2px 10px 0px;
   }
 
 .btn.btn-sm.btn-dark:hover {
@@ -337,6 +343,8 @@ img.img-fluid {
     color: #011826;
     margin-top: 10px;
     margin-bottom: 10px;
+    font-size: 18px;
+    box-shadow: rgba(1, 24, 38, 0.16) 0px 2px 5px 0px, rgba(1, 24, 38, 0.12) 0px 2px 10px 0px;
 }
 
   hr.box {
