--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -56,8 +56,8 @@ h3 {
     text-align: center;
     color: #011826;
     font-size: 1.5rem;
-    margin-bottom: 30px;
-    padding-bottom: 30px;
+    margin-top: 50px;
+    margin-bottom: 50px;
 }
 
 h4,
@@ -72,8 +72,8 @@ h6 {
 }
 
 p {
-    font-family: 'Montserrat', sans-serif;
-    font-size: 14px;
+    font-family: 'Futura-PT', sans-serif;
+    font-size: 1rem;
     text-align: center;
 }
 
@@ -207,10 +207,6 @@ h1.display-3 {
     margin-bottom: 40px;
 }
 
-#about {
-    padding-top: 60px;
-}
-
 /*-------------------------------------------- Icons */
 i.fas.fa-yin-yang.d-sm-block,
 i.fas.fa-peace.d-sm-block,
@@ -233,132 +229,181 @@ i.fas.fa-praying-hands.d-sm-block:hover {
 }
 
 /*-------------------------------------------- Schedule */
-div.box {
-    position: relative;
-    -webkit-transition: all 0.2s ease-out 0s;
-    -o-transition: all 0.2s ease-out 0s;
-    transition: all 0.2s ease-out 0s;
-    max-width: 300px;
-    height: auto;
-    padding-bottom: 10px;
-    margin: 0 auto;
+
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;500;600;800;900&family=Playfair+Display:ital,wght@0,400;0,500;0,700;0,800;0,900;1,400;1,500;1,600&display=swap');
+
+*, *::before, *::after {
+  box-sizing: border-box;
 }
-  
-  .box .box-content,
-  .box:after {
-    position: absolute;
-    left: 20px;
-    right: 20px;
-  }
-  
-  .box:after {
-    content: "";
-    display: block;
-    background: rgba(105, 168, 169, 2);
-    top: 20px;
-    bottom: 20px;
-    opacity: 0;
-    -webkit-transform: rotate3d(-1, 1, 0, 100deg);
-            transform: rotate3d(-1, 1, 0, 100deg);
-    -webkit-transition: all 0.4s ease-in-out 0s;
-    -o-transition: all 0.4s ease-in-out 0s;
-    transition: all 0.4s ease-in-out 0s;
-  }
-  
-  .box:hover:after {
-    opacity: 0.9;
-    -webkit-transform: rotate3d(0, 0, 0, 0deg);
-            transform: rotate3d(0, 0, 0, 0deg);
-  }
-  
-img.schedule-img {
-    max-width: 100%;
-    height: auto;
-    position: relative;
+
+body {
+  background: #FDFDFD;
+  margin: 25px 0;
+}
+
+/*-------------------------------------------- Schedule */
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v7.0.29,
+* Autoprefixer: v9.7.6
+* Browsers: last 4 version
+*/
+
+.container-wrapper-schedule{
+    background: rgba(135, 156, 166, 0.2);
+    text-align: center;
+    padding-top: 30px;
+    margin-bottom: 30px;
+}
+
+.top-color {
+    background-color: #69a8a9 !important;
+}
+
+.schedule-card .card-top {
+    height: 120px;
     overflow: hidden;
     border-top-left-radius: .25rem;
     border-top-right-radius: .25rem;
-    box-shadow: rgba(1, 24, 38, 0.16) 0px 2px 5px 0px, rgba(1, 24, 38, 0.12) 0px 2px 10px 0px;
-    border: 4px solid #f2f2f2;
+}
+  
+p {
+    margin-top: 0;
+    margin-bottom: 1rem;
+}
+  
+.schedule-card .avatar {
+  width: 120px;
+  height: auto;
+  margin-top: -60px;
+  overflow: hidden;
+  border: 1px solid #fff;
+  border-radius: 50%;
+}
+
+.schedule-card .card-body {
+    text-align: center;
+}
+ 
+.card {
+    margin-top: 10px;
+    margin-bottom: 10px;
+    position: relative;
+    display: -ms-flexbox;
+    display: -webkit-box;
     display: flex;
+    -ms-flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+            flex-direction: column;
+    min-width: 0;
+    word-wrap: break-word;
+    background-color: #fafafa;
+    -webkit-box-shadow: rgba(1, 24, 38, 0.16) 0px 2px 5px 0px, rgba(1, 24, 38, 0.12) 0px 2px 10px 0px;
+            box-shadow: rgba(1, 24, 38, 0.16) 0px 2px 5px 0px, rgba(1, 24, 38, 0.12) 0px 2px 10px 0px;
+  }
+  
+.card-body {
+    -ms-flex: 1 1 auto;
+    -webkit-box-flex: 1;
+            flex: 1 1 auto;
+    min-height: 1px;
+    padding: 1.25rem;
 }
   
-  .box .box-content {
-    top: 50%;
-    opacity: 0;
-    z-index: 1;
-    -webkit-transform: translate(10%, -30%);
-    -ms-transform: translate(10%, -30%);
-        transform: translate(10%, -30%);
-    -webkit-transition: all 0.2s ease-out 0s;
-    -o-transition: all 0.2s ease-out 0s;
-    transition: all 0.2s ease-out 0s;
-  }
-  
-  .box:hover .box-content {
-    opacity: 1;
-    -webkit-transform: translate(0, -50%);
-        -ms-transform: translate(0, -50%);
-            transform: translate(0, -50%);
-    -webkit-transition-delay: 0.2s;
-         -o-transition-delay: 0.2s;
-            transition-delay: 0.2s;
-  }
-  
-.box .title {
-    display: block;
-    font-size: 20px;
-    font-weight: 700;
-    color: #000000;
-    margin-top: 10px;
-    font-family: "Playfair Display", serif;
-    font-style: italic;
-    text-align: center;
-    margin-top: 30px;
-    margin: 10px 10px;
+ .schedule-card .card-top {
+    height: 120px;
     overflow: hidden;
-}
-  
-  .box .post {
-    font-family: "Futura-PT", san-serif;
-    display: inline-block;
-    font-size: 16px;
-    color: #000000;
-    text-align: center;
+    border-top-left-radius: .25rem;
+    border-top-right-radius: .25rem;
   }
-  
-  .btn.btn-sm.btn-dark {
-    font-family: "Futura-PT", san-serif;
-    text-align: center;
-    color: #f2f2f2;
-    margin-top: 10px;
-    margin-bottom: 10px;
-    font-size: 18px;
-    box-shadow: rgba(1, 24, 38, 0.16) 0px 2px 5px 0px, rgba(1, 24, 38, 0.12) 0px 2px 10px 0px;
-  }
-
-.btn.btn-sm.btn-dark:hover {
-    background-color: #f2f2f2;
-    border-color: #f2f2f2;
-    color: #011826;
-    margin-top: 10px;
-    margin-bottom: 10px;
-    font-size: 18px;
-    box-shadow: rgba(1, 24, 38, 0.16) 0px 2px 5px 0px, rgba(1, 24, 38, 0.12) 0px 2px 10px 0px;
+ 
+.schedule hr {
+        width: 20px;
+        margin-top: 20px;
+        margin-bottom: 20px;
+        border-top: 3px solid #69a8a9;
 }
 
-  hr.box {
-    border-top: 2.5px solid rgb(33, 37, 41);
-    width: 25px;
-    margin-top: 10px;
-    margin-bottom: 10px;
-  }
-  
-  @media only screen and (max-width: 990px) {
-    .box {
-      margin-bottom: 30px;
-    }
-  }
+p.text-muted {
+  font-size: 12px;
+  font-family: 'Futura-PT', sans-serif;
+}
+
+p, 
+a.nav-item {
+   font-family: 'Futura-PT', sans-serif;
+  margin: 0 auto;
+  color: #000;
+}
+
+a.nav-item:hover {
+   font-family: 'Futura-PT', sans-serif;
+  color: #69a8a9;
+}
+
+h4.card-title.mt-1 {
+  font-family: 'Playfair Display', serif;
+  font-style: italic;
+  font-weight: 500;
+  font-size: 1.5rem;
+}
+
+
+/* Button */
+
+.signUp {
+  width: 130px;
+  height: 65px;
+  margin: 0 auto;
+  color: #011826;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 1rem;
+  line-height: 65px;
+  text-transform: uppercase;
+  text-align: center;
+  position: relative;
+  cursor: pointer;
+}
+
+svg {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+svg rect, svg path, svg polyline {
+  fill: none;
+  stroke: #fff;
+  stroke-width: 2;
+}
+
+.signUp:hover svg rect {
+  stroke: #69a8a9;
+}
+
+svg rect {
+  stroke-dasharray: 400, 0;
+  transition: all 0.8s ease-in-out;
+  -webkit-transition: all 0.8s ease-in-out;
+  -moz-transition: all 0.8s ease-in-out;
+  -ms-transition: all 0.8s ease-in-out;
+  -o-transition: all 0.8s ease-in-out;
+}
+
+.signUp:hover svg rect {
+  stroke-width: 3;
+  stroke-dasharray: 35, 245;
+  stroke-dashoffset: 38;
+  transition: all 0.8s ease-in-out;
+  -webkit-transition: all 0.8s ease-in-out;
+  -moz-transition: all 0.8s ease-in-out;
+  -ms-transition: all 0.8s ease-in-out;
+  -o-transition: all 0.8s ease-in-out;
+}
+/*./schedule.*/
+
+
 /*-------------------------------------------- Quotes */
 .container-wrapper-quotes{
     background: rgba(135, 156, 166, 0.2);
@@ -447,15 +492,18 @@ p {
 }
 
 blockquote {
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Futura-PT', sans-serif;
     font-size: 1rem;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    padding: 10px 10px;
 }
 
 .quotes hr {
-    width: 60px;
+    width: 20px;
     margin-top: 20px;
     margin-bottom: 20px;
-    border-top: 1.5px solid rgb(185, 185, 185);
+    border-top: 3px solid #69a8a9;
 }
 
 #quotes {
@@ -505,12 +553,18 @@ footer h6 {
     padding-top: 60px;
     padding-bottom: 40px;
     margin-bottom: 50px;
-    background-color: rgba(135, 156, 166, 0.3);
 }
 
 #contact {
     padding-top: 60px;
     padding-bottom: 40px;
+    margin-bottom: 50px;
+}
+
+
+#about {
+    padding: 60px 40px;
+    margin-top: 50px;
     margin-bottom: 50px;
 }
 
@@ -549,8 +603,7 @@ footer h6 {
 
 body {
     padding: 0;
-    margin: 0;
-    background: #f2f2f2;
+    margin: 0 auto;
 }
 
 #notfound {
