--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,8 +19,6 @@ html {
 hr {
     border-top: 2.5px solid rgb(33, 37, 41);
     width: 25px;
-    margin-top: 40px;
-    margin-bottom: 40px;
 }
 
 /* https://www.w3schools.com/cssref/sel_selection.asp */
@@ -35,7 +33,6 @@ hr {
 }
 
 /*-----------------------------------------Headers */
-
 h1 {
     color: #011826;
     text-shadow: 2px 2px #011826;
@@ -118,7 +115,6 @@ a.navbar-brand {
 }
 
 /*-------------------------------------------- Containers */
-
 .container-fluid {
     margin: 0 auto;
 }
@@ -127,7 +123,7 @@ a.navbar-brand {
     margin: 0 auto;
 }
 
-/* Jumbotron */
+/*-------------------------------------------- Jumbotron */
 /* jumbotron syntax and were copied from Code Institute's Whiskey Drop project */
 .jumbotron-container {
     background-image: url('../images/infinityphoto.jpg');
@@ -229,26 +225,6 @@ i.fas.fa-praying-hands.d-sm-block:hover {
 }
 
 /*-------------------------------------------- Schedule */
-
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;500;600;800;900&family=Playfair+Display:ital,wght@0,400;0,500;0,700;0,800;0,900;1,400;1,500;1,600&display=swap');
-
-*, *::before, *::after {
-  box-sizing: border-box;
-}
-
-body {
-  background: #FDFDFD;
-  margin: 25px 0;
-}
-
-/*-------------------------------------------- Schedule */
-/*
-* Prefixed by https://autoprefixer.github.io
-* PostCSS: v7.0.29,
-* Autoprefixer: v9.7.6
-* Browsers: last 4 version
-*/
-
 .container-wrapper-schedule{
     background: rgba(135, 156, 166, 0.2);
     text-align: center;
@@ -349,9 +325,6 @@ h4.card-title.mt-1 {
   font-size: 1.5rem;
 }
 
-
-/* Button */
-
 .signUp {
   width: 130px;
   height: 65px;
@@ -401,8 +374,6 @@ svg rect {
   -ms-transition: all 0.8s ease-in-out;
   -o-transition: all 0.8s ease-in-out;
 }
-/*./schedule.*/
-
 
 /*-------------------------------------------- Quotes */
 .container-wrapper-quotes{
@@ -512,7 +483,6 @@ blockquote {
 }
 
 /*-------------------------------------------- Contact */
-
 button.btn.btn-info.float-right {
     background-color: #69a8a9;
     border: #69A8A9;
@@ -548,7 +518,6 @@ footer h6 {
 }
 
 /*-------------------------------------------- Sections */
-
 #schedule {
     padding-top: 60px;
     padding-bottom: 40px;
@@ -567,6 +536,7 @@ footer h6 {
     margin-top: 50px;
     margin-bottom: 50px;
 }
+/*./sections*/
 
 
 /*-------------------------------------------- Media Queries */
@@ -595,7 +565,8 @@ footer h6 {
     }
 }
 
-/* 404 Error Page (https://colorlib.com) */
+
+/*--------------------------------------------  404 Error Page (https://colorlib.com) */
 * {
     -webkit-box-sizing: border-box;
     box-sizing: border-box
@@ -702,8 +673,6 @@ a.button:hover {
     .notfound .notfound-404 h2 {
         font-size: 30px;
         text-align: center;
-        /*! left: 20px; */
-        /*! padding: 30px 30px 20px inherit; */
     }
 }
 
