--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -53,7 +53,6 @@ h2 {
     font-style: italic;
     text-align: center;
     margin-bottom: 30px;
-    margin-top: 30px;
 }
 
 h3 {
@@ -242,8 +241,6 @@ i.fas.fa-praying-hands.d-sm-block:hover {
 .container-wrapper-schedule{
     background: rgba(135, 156, 166, 0.2);
     text-align: center;
-    padding-top: 30px;
-    margin-bottom: 30px;
 }
 
 .card .card-body {
@@ -454,6 +451,10 @@ button.btn.btn-info.float-right:hover {
     border: #011801;
     font-family: 'Playfair Display', serif;
     color: #f2f2f2;
+}
+
+.form-group {
+    margin-top: 20px;
 }
 
 /*-------------------------------------------- Footer */
