--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -246,6 +246,10 @@ i.fas.fa-praying-hands.d-sm-block:hover {
 .card .card-body {
     text-align: center;
 }
+
+.card-deck, .card {
+margin: 0 auto;
+}
  
 .card {
     margin-top: 10px;
@@ -484,6 +488,12 @@ footer h6 {
 }
 
 /*-------------------------------------------- Sections */
+#about {
+    padding: 60px 40px;
+    margin-bottom: 50px;
+    margin-top: 50px;
+}
+
 #schedule {
     padding: 60px 40px;
     margin-bottom: 50px;
@@ -494,12 +504,6 @@ footer h6 {
     padding: 60px 40px;
     margin-top: 50px;
     margin-bottom: 50px;
-}
-
-#about {
-    padding: 60px 40px;
-    margin-bottom: 50px;
-    margin-top: 50px;
 }
 
 /*./sections*/
