--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,8 +13,10 @@ html {
     font-size: 16px;
 }
 
+body,
 .row,
-.container {
+.container, 
+.container-fluid {
     margin: 0 auto;
 }
 
@@ -312,6 +314,7 @@ a.nav-link.active.signUp {
 	text-align: center;
 	border-radius: 2px;
 	-webkit-transition: all 0.4s;
+    -o-transition: all 0.4s;
     transition: all 0.4s;
     font-family: 'Futura-PT', sans-serif;
     font-size: 1rem;
@@ -366,6 +369,7 @@ a.nav-link.active.signUp:hover {
 	text-align: center;
 	border-radius: 2px;
 	-webkit-transition: all 0.4s;
+	-o-transition: all 0.4s;
 	transition: all 0.4s;
 }
 
@@ -394,6 +398,7 @@ position: relative;
 }
 
 [type="date"]::-webkit-inner-spin-button {
+	display: -webkit-box;
 	display: flex;
 	font-family: "Futura-PT", sans-serif;
 }
@@ -436,24 +441,16 @@ position: relative;
     height: auto;
 }
 
-.quote-card {
-    margin-top: 10px;
-    margin-bottom: 10px;
-    position: relative;
-    display: -ms-flexbox;
-    display: -webkit-box;
-    display: flex;
-    -ms-flex-direction: column;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-            flex-direction: column;
-    min-width: 0;
-    word-wrap: break-word;
-    background-color: #fafafa;
+.card.quote-card.h-100 {
+    background-color: #fff;
     -webkit-box-shadow: rgba(1, 24, 38, 0.16) 0px 2px 5px 0px, rgba(1, 24, 38, 0.12) 0px 2px 10px 0px;
-            box-shadow: rgba(1, 24, 38, 0.16) 0px 2px 5px 0px, rgba(1, 24, 38, 0.12) 0px 2px 10px 0px;
+    box-shadow: rgba(1, 24, 38, 0.16) 0px 2px 5px 0px, rgba(1, 24, 38, 0.12) 0px 2px 10px 0px;
   }
   
+  .col-xs-8.col-sm-4 {
+    margin-top: 20px;
+  }
+
   .card-body {
     -webkit-box-flex: 1;
         -ms-flex: 1 1 auto;
@@ -495,6 +492,22 @@ button.btn.btn-info.float-right:hover {
 
 .form-group {
     margin-top: 20px;
+}
+
+.form-control::-webkit-input-placeholder {
+    font-family: 'Futura-PT', sans-serif;
+}
+
+.form-control::-moz-placeholder {
+    font-family: 'Futura-PT', sans-serif;
+}
+
+.form-control:-ms-input-placeholder {
+    font-family: 'Futura-PT', sans-serif;
+}
+
+.form-control::-ms-input-placeholder {
+    font-family: 'Futura-PT', sans-serif;
 }
 
 .form-control::placeholder {
@@ -665,13 +678,13 @@ body {
 
 .notfound a:hover {
     background-color: #90bfc0;
-    border-color: #90bfc0;
+    border-color: transparent;
     color: #f2f2f2;
 }
 
 a.button:hover {
     background-color: #d59cad;
-    border-color: #d59cad;
+    border-color: transparent;
     color: #F2F2F2;
 }
 
