--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -44,6 +44,7 @@ h2 {
     font-style: italic;
     text-align: center;
     margin-bottom: 30px;
+    margin-top: 60px;
 }
 
 h3 {
@@ -221,8 +222,11 @@ i.fas.fa-praying-hands.d-sm-block:hover {
 .container-wrapper-schedule{
     background: rgba(135, 156, 166, 0.2);
     text-align: center;
-    padding: 60px 40px;
-    margin-bottom: 50px;
+}
+
+p.schedule-content {
+    font-size: 1rem;
+    margin-bottom: 30px;
 }
  
 .card {
@@ -429,11 +433,6 @@ blockquote {
     padding: 10px 10px;
 }
 
-#quotes {
-    padding-top: 40px;
-    margin-bottom: 50px;
-}
-
 /*-------------------------------------------- Contact */
 .row.contact {
     margin-top: 50px;
@@ -502,16 +501,20 @@ footer h6 {
 #about {
     padding: 60px 40px;
     margin-bottom: 50px;
-    margin-top: 50px;
 }
 
 #schedule {
     margin-top: 50px;
+    margin-bottom: 50px;
+    padding: 60px 40px;
 }
 
 #contact {
     padding: 60px 40px;
-    margin-top: 50px;
+    margin-bottom: 50px;
+}
+
+#quotes {
     margin-bottom: 50px;
 }
 
